Analysis on instantiating IVC with folding scheme

--- a/dp2/content/analysis/snarkification.tex
+++ b/dp2/content/analysis/snarkification.tex
@@ -67,7 +67,7 @@ EVM's execution logic needs to be provable with a ZKPs, creating a ZkEVM. This
 would change the state transition function (\ref{eq:state_transition}) to:
 
 \[
-	F(S_n, T) = (S_{n+1}, \pi)
+	F(state_n, T) = (state_{n+1}, \pi)
 \]
 
 Where $\pi$ is the proof of the state transition's validity. Therefore,
