--- a/dp2/pages/abbreviations.tex
+++ b/dp2/pages/abbreviations.tex
@@ -12,6 +12,7 @@
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
 	EVM & Ethereum Virtual Machine 							\\
 	ISA & Instruction Set Architecture 						\\
+	NIFS & Non-Interactive Folding Scheme 					\\
 	L1 	& Layer 1 											\\
 	L2 	& Layer 2 											\\
 	PCS & Polynomial Commitment Scheme 						\\
