--- a/dp2/bibliography.bib
+++ b/dp2/bibliography.bib
@@ -359,3 +359,11 @@
   pages = {10–19},
   collection = {STOC ’98}
 }
+
+@misc{CCS,
+      author = {Srinath Setty and Justin Thaler and Riad Wahby},
+      title = {Customizable constraint systems for succinct arguments},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2023/552},
+      year = {2023},
+      url = {https://eprint.iacr.org/2023/552}
+}
