--- a/dp2/main.tex
+++ b/dp2/main.tex
@@ -60,6 +60,8 @@
 
     \include{content/introduction}
 
+	\include{content/problem_statement}
+
     \include{content/analysis/analysis}
 
     % Bibliography
