--- a/dp2/main.tex
+++ b/dp2/main.tex
@@ -64,6 +64,8 @@
 
     \include{content/analysis/analysis}
 
+    \include{content/solution/solution}
+
     % Bibliography
     \printbibliography[heading=references,segment=\therefsegment]
 
