--- a/dp2/bibliography.bib
+++ b/dp2/bibliography.bib
@@ -367,3 +367,20 @@
       year = {2023},
       url = {https://eprint.iacr.org/2023/552}
 }
+
+
+@misc{Poseidon2,
+      author = {Lorenzo Grassi and Dmitry Khovratovich and Markus Schofnegger},
+      title = {Poseidon2: A Faster Version of the Poseidon Hash Function},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2023/323},
+      year = {2023},
+      url = {https://eprint.iacr.org/2023/323}
+}
+
+@misc{MSIS,
+      author = {Adeline Langlois and Damien Stehle},
+      title = {Worst-Case to Average-Case Reductions for Module Lattices},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2012/090},
+      year = {2012},
+      url = {https://eprint.iacr.org/2012/090}
+}
