--- a/dp2/content/problem_statement.tex
+++ b/dp2/content/problem_statement.tex
@@ -75,7 +75,7 @@ scientific questions:
 		CCS compatible with the LatticeFold protocol?}
     \item \textbf{Performance trade-offs:} \textit{How does the performance of
 		a lattice-based folding scheme compare to traditional
-		elliptic-curve-based folding schemes when applied to general-purpose
+		elliptic curve-based folding schemes when applied to general-purpose
 		VM execution?}
     \item \textbf{Suitability for long-running computations:} \textit{Does the
 		noise growth inherent in lattice-based cryptography hinder the ability
