--- a/dp2/content/problem_statement.tex
+++ b/dp2/content/problem_statement.tex
@@ -52,7 +52,7 @@ Ethereum blocks. The specific objectives are defined as follows:
     \item \textbf{Architectural Design: } Design a system architecture for a
 		ZkVM that maps the RISC-V instruction set architecture to the
 		constraints of the LatticeFold folding scheme. This involves defining
-		the arithmetization of 32-bit CPU logic into a Customizable Constraint
+		the arithmetization of 32 bit CPU logic into a Customizable Constraint
 		Systems (CCS) \cite{CCS} structure, suitable to be used by LatticeFold.
     \item \textbf{Implementation:} Implement the proposed design using the
 		Rust programming language, integrating with the available LatticeFold
