--- a/dp2/pages/abbreviations.tex
+++ b/dp2/pages/abbreviations.tex
@@ -13,6 +13,7 @@
 	EVM & Ethereum Virtual Machine 							\\
 	ISA & Instruction Set Architecture 						\\
 	NIFS & Non-Interactive Folding Scheme 					\\
+	NTT  & Number Theoretic Transform						\\
 	L1 	& Layer 1 											\\
 	L2 	& Layer 2 											\\
 	PCS & Polynomial Commitment Scheme 						\\
